# src/api/openapi.yaml
@@ -1,4 +1,11 @@
 openapi: 3.0.0
+x-origin:
+  - url: http://localhost:8080/swagger.yaml
+    format: swagger
+    version: "2.0"
+    converter:
+      url: https://github.com/mermade/oas-kit
+      version: 7.0.8
 info:
   contact:
     email: support@swagger.io
@@ -1234,6 +1241,10 @@ components:
           type: string
         payment_date:
           type: string
+        tag_ids:
+          items:
+            type: string
+          type: array
         tenant_id:
           type: string
         to_account_id:
